tests/reference/asr-test_compare_02-bf2c76e.stderr
semantic error: Comparison operator not supported between instances of 'i32' and 'u32'
 --> tests/errors/test_compare_02.py:6:11
  |
6 |     print(x > y)
  |           ^^^^^ 
